grid applied to card container, but overflowing cards aren't sizing correctly

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* general */
 :root {
-    --col-nav: royalblue;
+    --col-nav: rgb(50,50,50);
     --col-head: white;
     --col-main: lightgrey;
     --col-nav-text: white;
@@ -113,7 +113,10 @@ input{
     width: 100%;
     background-color: var(--col-main);
     display: grid;
-    grid-template-rows: 200px 1fr;
+    grid-template-rows: 150px 1fr;
+}
+#main-container>*{
+    padding:20px;
 }
 .symbol-default{
     fill:'black';
@@ -165,7 +168,7 @@ input{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap:20px;
-    margin:auto;
+    margin:auto 0 auto auto;
 }
 
 
@@ -174,20 +177,43 @@ input{
     background-color: grey;
     display: grid;
     grid-template: 1fr 1fr / 3fr 1fr;
+    gap:20px;
 }
-
+#content>div{
+    display:grid;
+    grid-template: 1rem 1fr / 1fr;
+    gap: 5px;
+}
+.card{
+    background-color:var(--col-head);
+    border-radius:10px;
+    width:100%;
+    height:100%;
+    padding:20px;
+    box-sizing:border-box;
+}
 #cards-container {
     grid-area: 2 span / 1 span;
 }
-
+#cards-container>div{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+    overflow: auto;
+    -ms-overflow-style:none;
+    scrollbar-width:none;
+}
+#cards-container>div::-webkit-scrollbar{
+    display:none;
+}
 #news-container,
 #trends-container {
     grid-column-start: 2;
 }
 
 /* temp */
-#header>div,
-#content>div, #header>nav{
+#content>div{
     border: solid 1px;
     padding: 3px;
 }
